chore!: update insert room and add member APIs (#123)
Both APIs have been refactored to allow bulk requests for members or owners:

- insert room API now accepts a list of objects, each of them formed by a user
identifier and a boolean indicating if the user will be a moderator of the room
- add member API now accepts a list of objects, each of them formed by a user
identifier, a boolean indicating if the user will be a moderator of the room
and another boolean indicating if the chat has to be cleared when the user
joins the room.

ref: WSC-1739